Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 
     #fixedText {
       position: fixed;
-      top: 10px; /* Ajusta la distancia desde la parte superior según sea necesario */
-      right: 10px; /* Ajusta la distancia desde la derecha según sea necesario */
+      top: 5vh; /* Ajusta la distancia desde la parte superior según sea necesario */
+      right: 5vw; /* Ajusta la distancia desde la derecha según sea necesario */
       z-index: 999; /* Ajusta el z-index según sea necesario para estar encima de otros elementos */
       background-color: red;
       color: white;
