--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@ position: fixed;
   border-radius: 5px;
   font-size: 14px; /* Ajusta el tamaño del texto según sea necesario */
 
+
+max-width: 90%; 
+
     }
 
 
