--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@ position: fixed;
   color: white;
   padding: 10px;
   border-radius: 5px;
-  font-size: 14px; /* Ajusta el tamaño del texto según sea necesario */
+  font-size: 2vw; /* Ajusta el tamaño del texto según sea necesario */
 
 
 max-width: 90%; 
