Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -77,8 +77,8 @@ display: none; }
 #hexagonGroup {
 top: 40;
 left: 0;
-width: 3000px;
-height: 3000px;
+width: 100vw;
+height: 100vh;
 position: absolute;
 
 z-index: 1;
