--- a/public/index.html
+++ b/public/index.html
@@ -105,27 +105,27 @@ display: none; }
 <div id="mainContainer">
 
 </div>
-	<div id="fixedText">    
+	<div class="fixedText">    
 
 <text x="10" y="20" fill="red" id="textLine1"></text>
 		</div>
 
-		<div id="fixedText">    
+		<div class="fixedText">    
 
     <text x="10" y="40" fill="blue" id="textLine2"></text>
 			</div>
 
-			<div id="fixedText">    
+			<div class="fixedText">    
 
     <text x="10" y="60" fill="green" id="textLine3"></text>
 				</div>
 
-				<div id="fixedText">    
+				<div class="fixedText">    
 
     <text x="10" y="80" fill="orange" id="textLine4"></text>
 					</div>
 
-					<div id="fixedText">    
+					<div class="fixedText">    
 
     <text x="10" y="100" fill="purple" id="textLine5"></text>
 
