--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,8 @@ display: none; }
 
 </div>
 
+	<div id="fixedText">
+
 <text x="10" y="20" fill="red" id="textLine1"></text>
 
     <text x="10" y="40" fill="blue" id="textLine2"></text>
@@ -115,6 +117,7 @@ display: none; }
     <text x="10" y="80" fill="orange" id="textLine4"></text>
 					
     <text x="10" y="100" fill="purple" id="textLine5"></text>
+</div>
 
 
 <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
