--- a/public/index.html
+++ b/public/index.html
@@ -367,11 +367,11 @@ function moveBluePoint( clickX, clickY ) {
       textLine4.textContent = topplayers.length >= 4 ? topplayers[3].nombre : '';
      textLine5.textContent = topplayers.length >= 5 ? topplayers[4].nombre : '';
 */
-		textLine1.textContent = 'dsaads';
-     textLine2.textContent =  'adssda';
-     textLine3.textContent = 'adsdsa';
-      textLine4.textContent = 'fff';
-     textLine5.textContent = 'qqq';
+		textLine1.textContent = 'dsaads'+ '\n';
+     textLine2.textContent =  'adssda'+ '\n';
+     textLine3.textContent = 'adsdsa'+ '\n';
+      textLine4.textContent = 'fff'+ '\n';
+     textLine5.textContent = 'qqq'+ '\n';
  
 
 const playersContainer = document.getElementById('playersContainer');
