--- a/public/index.html
+++ b/public/index.html
@@ -108,15 +108,21 @@ display: none; }
 
 	<div id="fixedText">
 
-<text x="10" y="20" fill="red" id="textLine1"></text>
-
-    <text x="10" y="40" fill="blue" id="textLine2"></text>
-		
-    <text x="10" y="60" fill="green" id="textLine3"></text>
-
-    <text x="10" y="80" fill="orange" id="textLine4"></text>
-					
-    <text x="10" y="100" fill="purple" id="textLine5"></text>
+<text id="textLine1" x="10" y="20" fill="red">
+    <tspan>dsaads</tspan>
+  </text>
+  <text id="textLine2" x="10" y="40" fill="blue">
+    <tspan dy="1em">adssda</tspan>
+  </text>
+  <text id="textLine3" x="10" y="60" fill="green">
+    <tspan dy="1em">adsdsa</tspan>
+  </text>
+  <text id="textLine4" x="10" y="80" fill="orange">
+    <tspan dy="1em">fff</tspan>
+  </text>
+  <text id="textLine5" x="10" y="100" fill="purple">
+    <tspan dy="1em">qqq</tspan>
+  </text>
 </div>
 
 
@@ -366,13 +372,19 @@ function moveBluePoint( clickX, clickY ) {
      textLine3.textContent = topplayers.length >= 3 ? topplayers[2].nombre : '';
       textLine4.textContent = topplayers.length >= 4 ? topplayers[3].nombre : '';
      textLine5.textContent = topplayers.length >= 5 ? topplayers[4].nombre : '';
-*/
+
 		textLine1.textContent = 'dsaads'+ '\n';
      textLine2.textContent =  'adssda'+ '\n';
      textLine3.textContent = 'adsdsa'+ '\n';
       textLine4.textContent = 'fff'+ '\n';
      textLine5.textContent = 'qqq'+ '\n';
- 
+*/
+		document.getElementById('textLine1').getElementsByTagName('tspan')[0].textContent = 'Nuevo Texto 1';
+  document.getElementById('textLine2').getElementsByTagName('tspan')[0].textContent = 'Nuevo Texto 2';
+  document.getElementById('textLine3').getElementsByTagName('tspan')[0].textContent = 'Nuevo Texto 3';
+  document.getElementById('textLine4').getElementsByTagName('tspan')[0].textContent = 'Nuevo Texto 4';
+  document.getElementById('textLine5').getElementsByTagName('tspan')[0].textContent = 'Nuevo Texto 5';
+
 
 const playersContainer = document.getElementById('playersContainer');
 
