--- a/public/index.html
+++ b/public/index.html
@@ -299,6 +299,18 @@ addPlayer(player.nombre, player.puntos, player.color);
 });
 
 
+function mostrarJugadoresConectados() {
+  console.log("Jugadores Conectados:");
+  for (const playerId in players) {
+    if (players.hasOwnProperty(playerId)) {
+      const player = players[playerId];
+      console.log(`ID: ${playerId}, Nombre: ${player.nombre}, Color: ${player.color}, Puntos: ${player.puntos}`);
+    }
+  }
+}
+	
+
+
 //ANIMATE BLUE POINT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //////////////////////////////////////////////////////////////////////
 	
@@ -366,6 +378,9 @@ createHexagons();
 //////////////////////////////////////////////////////////////////////	
 	
 function moveBluePoint( clickX, clickY ) {   
+
+
+	mostrarJugadoresConectados();
 
 	//socket.emit('updatePlayers'); // Emitir un nuevo evento al servidor
 
