--- a/public/index.html
+++ b/public/index.html
@@ -300,14 +300,15 @@ addPlayer(player.nombre, player.puntos, player.color);
 
 
 function mostrarJugadoresConectados() {
-  console.log("Jugadores Conectados:");
-  for (const playerId in players) {
-  //  if (players.hasOwnProperty(playerId)) {
-      const player = players[playerId];
-      console.log(`ID: ${playerId}, Nombre: ${player.nombre}, Color: ${player.color}, Puntos: ${player.puntos}`);
-   // }
-  }
+    console.log("Jugadores Conectados:");
+    for (const playerId in players) {
+    //    if (players.hasOwnProperty(playerId)) {
+            const jugador = players[playerId];
+            console.log(`ID: ${playerId}, Nombre: ${jugador.nombre}, Color: ${jugador.color}, Puntos: ${jugador.puntos}`);
+      //  }
+    }
 }
+
 	
 
 
