--- a/public/index.html
+++ b/public/index.html
@@ -305,19 +305,20 @@ textLine4.textContent = topplayers.length >= 4 ? '#4 '+topplayers[3].nombre+ ': 
 textLine5.textContent = topplayers.length >= 5 ? '#5 '+topplayers[4].nombre+ ': '+topplayers[4].puntos : '';
 */
 textLine1.textContent = topPlayers.length >= 1 ? `#1 ${topPlayers[0].nombre}: ${topPlayers[0].puntos}` : '';
-	textLine1.style.color = topPlayers[0].color|| 'black'; 
+
+if (topPlayers[0] && topPlayers[0].color) {textLine1.style.color = topPlayers[0].color; } else {}
 
 textLine2.textContent = topPlayers.length >= 2 ? `#2 ${topPlayers[1].nombre}: ${topPlayers[1].puntos}` : '';
-		textLine2.style.color = topPlayers[1].color|| 'black';
+if (topPlayers[1] && topPlayers[1].color) {textLine2.style.color = topPlayers[1].color; } else {}
 
 textLine3.textContent = topPlayers.length >= 3 ? `#3 ${topPlayers[2].nombre}: ${topPlayers[2].puntos}` : '';
-		textLine3.style.color = topPlayers[2].color|| 'black';
+if (topPlayers[2] && topPlayers[2].color) {textLine3.style.color = topPlayers[2].color; } else {}
 
 textLine4.textContent = topPlayers.length >= 4 ? `#4 ${topPlayers[3].nombre}: ${topPlayers[3].puntos}` : '';
-		textLine4.style.color = topPlayers[3].color|| 'black';
+if (topPlayers[3] && topPlayers[3].color) {textLine4.style.color = topPlayers[3].color; } else {}
 
 textLine5.textContent = topPlayers.length >= 5 ? `#5 ${topPlayers[4].nombre}: ${topPlayers[4].puntos}` : '';
-		textLine5.style.color = topPlayers[4].color|| 'black';
+if (topPlayers[4] && topPlayers[4].color) {textLine5.style.color = topPlayers[4].color; } else {}
 
 
 	
