--- a/public/index.html
+++ b/public/index.html
@@ -320,6 +320,10 @@ if (topPlayers[3] && topPlayers[3].color) {textLine4.style.color = topPlayers[3]
 textLine5.textContent = topPlayers.length >= 5 ? `#5 ${topPlayers[4].nombre}: ${topPlayers[4].puntos}` : '';
 if (topPlayers[4] && topPlayers[4].color) {textLine5.style.color = topPlayers[4].color; } else {}
 
+      console.log('Color de topPlayers[0]:', topPlayers[0].color);
+      console.log('Color de topPlayers[1]:', topPlayers[1].color);
+      console.log('Color de topPlayers[2]:', topPlayers[2].color);
+      console.log('Color de topPlayers[3]:', topPlayers[3].color);
 
 	
 	
