--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@ textLine5.textContent = topplayers.length >= 5 ? '#5 '+topplayers[4].nombre+ ': 
 textLine1.textContent = topPlayers.length >= 1 ? `#1 ${topPlayers[0].nombre}: ${topPlayers[0].puntos}` : '';
 
 if (topPlayers[0] && topPlayers[0].color) {
-	textLine1.style.color = topPlayers[0].color; 
+	textLine1.style.fill = topPlayers[0].color; 
 		      console.log('SII');
 
 					  } else {
@@ -316,21 +316,21 @@ if (topPlayers[0] && topPlayers[0].color) {
 					  }
 
 textLine2.textContent = topPlayers.length >= 2 ? `#2 ${topPlayers[1].nombre}: ${topPlayers[1].puntos}` : '';
-if (topPlayers[1] && topPlayers[1].color) {textLine2.style.color = topPlayers[1].color; } else {}
+if (topPlayers[1] && topPlayers[1].color) {textLine2.style.fill = topPlayers[1].color; } else {}
 
 textLine3.textContent = topPlayers.length >= 3 ? `#3 ${topPlayers[2].nombre}: ${topPlayers[2].puntos}` : '';
-if (topPlayers[2] && topPlayers[2].color) {textLine3.style.color = topPlayers[2].color; } else {}
+if (topPlayers[2] && topPlayers[2].color) {textLine3.style.fill = topPlayers[2].color; } else {}
 
 textLine4.textContent = topPlayers.length >= 4 ? `#4 ${topPlayers[3].nombre}: ${topPlayers[3].puntos}` : '';
-if (topPlayers[3] && topPlayers[3].color) {textLine4.style.color = topPlayers[3].color; } else {}
+if (topPlayers[3] && topPlayers[3].color) {textLine4.style.fill = topPlayers[3].color; } else {}
 
 textLine5.textContent = topPlayers.length >= 5 ? `#5 ${topPlayers[4].nombre}: ${topPlayers[4].puntos}` : '';
-if (topPlayers[4] && topPlayers[4].color) {textLine5.style.color = topPlayers[4].color; } else {}
+if (topPlayers[4] && topPlayers[4].color) {textLine5.style.fill = topPlayers[4].color; } else {}
 
-      console.log('Color de topPlayers[0]:', topPlayers[0].color);
-      console.log('Color de topPlayers[1]:', topPlayers[1].color);
-      console.log('Color de topPlayers[2]:', topPlayers[2].color);
-      console.log('Color de topPlayers[3]:', topPlayers[3].color);
+    //  console.log('Color de topPlayers[0]:', topPlayers[0].color);
+     // console.log('Color de topPlayers[1]:', topPlayers[1].color);
+      //console.log('Color de topPlayers[2]:', topPlayers[2].color);
+      //console.log('Color de topPlayers[3]:', topPlayers[3].color);
 
 	
 	
