--- a/public/index.html
+++ b/public/index.html
@@ -919,31 +919,23 @@ function generateGreenCircles() {
         circle.parentNode.removeChild(circle);
     });
 
-    // Genera 30 círculos verdes en posiciones aleatorias
-    for (let i = 0; i < 30; i++) {
-        const randomHexagon = hexagons[Math.floor(Math.random() * hexagons.length)];
-        const points = randomHexagon.getAttribute('points').split(' ');
-        const randomPointIndex = Math.floor(Math.random() * points.length);
-        const [x, y] = points[randomPointIndex].split(',').map(Number);
-
+    // Dibuja los círculos verdes en las coordenadas recibidas del servidor
+    greenCircles.forEach(({ x, y }) => {
         const greenCircle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
         greenCircle.setAttribute('cx', x);
         greenCircle.setAttribute('cy', y);
         greenCircle.setAttribute('r', '8');
         greenCircle.setAttribute('fill', 'green');
         svg.appendChild(greenCircle);
-    }
-
-    // Emitir evento al servidor para que lo comparta con los demás jugadores
-    socket.emit('greenCirclesGenerated');
+    });
 }
 
-	// Escuchar evento del servidor para generar círculos verdes
-socket.on('generateGreenCircles', function () {
+// Manejar el evento 'greenCirclesGenerated' para actualizar los círculos verdes
+socket.on('greenCirclesGenerated', (circles) => {
+    greenCircles.length = 0;
+    greenCircles.push(...circles);
     generateGreenCircles();
 });
-
-
 
 
 	
