--- a/public/index.html
+++ b/public/index.html
@@ -910,6 +910,9 @@ return topPlayersx;
 
 /////////PRUEBA CIRCULOS PARA TODOS VERDES?//////
 // Agrega la función para generar círculos verdes
+
+	let greenCircles = [];
+
 function generateGreenCircles() {
     const svg = document.querySelector('svg');
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
