--- a/public/index.html
+++ b/public/index.html
@@ -924,6 +924,9 @@ function generateGreenCircles() {
         circle.parentNode.removeChild(circle);
     });
 
+		console.log(`LENGTH: ${greenCircles.length}:`);
+
+
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
     greenCircles.forEach(({ x, y }) => {
 console.log(`${x}: ${y}:`);
@@ -943,6 +946,8 @@ socket.on('greenCirclesGenerated', (circles) => {
 
     greenCircles.length = 0;
     greenCircles.push(...circles);
+	console.log(`LENGTH2: ${greenCircles.length}:`);
+
     generateGreenCircles();
 });
 
