Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -974,7 +974,7 @@ console.log(`${x}: ${y}:`);
 socket.on('greenCirclesGenerated', (circles) => {
 	            console.log('GREEN CIRCLES GENERATED 2.');
 
-    greenCircles.length = 0;
+   // greenCircles.length = 0;
     greenCircles.push(...circles);
 	console.log(`LENGTH2: ${greenCircles.length}:`);
 
