Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -950,7 +950,7 @@ console.log(`${x}: ${y}:`);
         circle.parentNode.removeChild(circle);
     });
 
-    greenCircles = [];
+//    greenCircles = [];
     for (let i = 0; i < 30; i++) {
         const randomHexagon = hexagons[Math.floor(Math.random() * hexagons.length)];
         const points = randomHexagon.getAttribute('points').split(' ');
