--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@ return topPlayersx;
 
 	let greenCircles = [];
 
-/*function generateGreenCircles() {
+function generateGreenCircles() {
 	            console.log('GENERATE GREEN CIRCLES 1.');
 
     const svg = document.querySelector('svg');
@@ -940,9 +940,9 @@ console.log(`${x}: ${y}:`);
         svg.appendChild(greenCircle);
     });
 }
-*/
 
-	function generateGreenCircles() {
+
+	function generateGreenCircles2() {
     const svg = document.querySelector('svg');
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
 
