Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -938,6 +938,9 @@ console.log(`${x}: ${y}:`);
         greenCircle.setAttribute('r', '8');
         greenCircle.setAttribute('fill', 'green');
         svg.appendChild(greenCircle);
+
+
+        greenCircles.push({ x, y, index: i });
     });
 }
 
