Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -993,18 +993,18 @@ socket.on('greenCirclesGenerated', (circles) => {
     for (const circle of greenCircles) {
 
 
-console.log(`COLISION133: ${circle.lenght}:`);
+//console.log(`COLISION133: ${circle.lenght}:`);
 
         const distance = Math.sqrt((playerX - circle.x) ** 2 + (playerY - circle.y) ** 2);
 
 
 
-console.log(`COLISION 1334: ${distance}:`);
+//console.log(`COLISION 1334: ${distance}:`);
 
-        if (distance < 8) {
+        if (distance < 20) {
 
 
-console.log(`COLISION 1999: ${cirle.index}:`);
+console.log(`COLISION 1999: ${circle.index}:`);
 
             // Emitir evento al servidor indicando el índice del círculo verde colisionado
             socket.emit('collisionWithGreenCircle', circle.index);
