Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -930,7 +930,7 @@ let i = 0;
 
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
     greenCircles.forEach(({ x, y }) => {
-console.log(`${x}: ${y}:`);
+//console.log(`${x}: ${y}:`);
 
         const greenCircle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
         greenCircle.setAttribute('cx', x);
