Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -929,6 +929,9 @@ function generateGreenCircles() {
 let i = 0;
 
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
+
+
+   greenCircles = [];
     greenCircles.forEach(({ x, y }) => {
 //console.log(`${x}: ${y}:`);
 
