Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -931,7 +931,7 @@ let i = 0;
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
 
 
-   greenCircles = [];
+//   greenCircles = [];
     greenCircles.forEach(({ x, y }) => {
 //console.log(`${x}: ${y}:`);
 
